# claude-code-setup

./: .env.example  .gitignore  .gitleaks.toml  .markdownlint.json  .markdownlint.jsonc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  PR-BODY.md  README.md  SECURITY.md  install.sh  uninstall.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  claude-review.yml  gitleaks.yml  smoke-test.yml  validate.yml
archive/: README.md
archive/bootstrap-templates/: README.md
archive/bootstrap-templates/ai-agent/: .env.example  .gitignore  pyproject.toml
archive/bootstrap-templates/ai-agent/src/agent/: config.py  state.py
archive/bootstrap-templates/ai-agent/src/agent/memory/: __init__.py  store.py
archive/bootstrap-templates/ai-agent/src/agent/nodes/: executor.py  planner.py
archive/bootstrap-templates/ai-agent/src/agent/prompts/: __init__.py  system.py  templates.py
archive/bootstrap-templates/ai-agent/src/agent/tools/: __init__.py  calculator.py
archive/bootstrap-templates/ai-agent/tests/: conftest.py  test_tools.py
bootstrap-templates/ai-agent/: CLAUDE.md  STRUCTURE.md  pyproject.toml
bootstrap-templates/cloudflare-worker/: .gitignore  CLAUDE.md  vitest.config.ts
bootstrap-templates/fastapi-backend/: .env.example  .gitignore  pyproject.toml
bootstrap-templates/fastapi-backend/src/app/: main.py
bootstrap-templates/fastapi-backend/src/app/models/: base.py  item.py
bootstrap-templates/fastapi-backend/src/app/routers/: auth.py  health.py  items.py
bootstrap-templates/fastapi-backend/src/app/schemas/: health.py
bootstrap-templates/telegram-bot/: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
bootstrap-templates/telegram-bot/src/bot/: __init__.py  config.py  main.py
bootstrap-templates/telegram-bot/src/bot/handlers/: help.py
bootstrap-templates/telegram-bot/src/bot/utils/: logger.py
commands/: setup-AI-Pulse-Georgia.md  setup.md
docs/: GOVERNANCE.md  PUSH.md  RELEASE.md  branch-protection.json  branch-protection.md
hooks/: README.md  settings-hooks.json  settings-hooks.windows.json
rules/: 01-auto-checkpoint.md  02-scope-control.md  03-error-recovery.md  04-visual-verification.md  05-session-management.md  06-destructive-actions.md  07-backup-strategy.md  08-communication.md  09-vague-prompt-handling.md  10-testing.md  11-ui-verification.md  12-memory.md  13-typescript-standards.md  14-python-standards.md  15-go-standards.md  16-production-standards.md  17-development-workflow.md  18-observability.md  19-api-versioning.md  20-rust-standards.md  21-swift-standards.md  README.md  security.md
scripts/: README.md  cleanup-backups.sh  cleanup-plugin-cache.sh  install-lib.sh  migrate-credentials.sh  patch-settings-2026.mjs  session-metrics.sh  validate-install.sh  verify-local-sync.sh
templates/: CLAUDE.md.example  README.md  settings.local.json.example
(+134 files in other folders)
