[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot built with python-telegram-bot v20+"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=20.7,<22",
    "python-dotenv>=1.0.0,<2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
