[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "AI Agent built with LangChain and LangGraph"
requires-python = ">=3.11"
dependencies = [
    # LangChain 1.0 (Oct 2025) unified the agent API. Pin 1.1+ to get
    # langchain.agents (replaces langgraph.prebuilt) and message content blocks.
    "langchain>=1.1,<2",
    "langchain-openai>=0.3.6",
    "langgraph>=1.0,<2",
    "langchain-community>=0.3.18",
    "python-dotenv>=1.0.1",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
